@@ -1675,6 +1675,14 @@ You can target similarly named items using the .1, .2, .3, etc syntax, \
 and can scan matching things using the LOOK FOR syntax. \
 See also EXAMINE or LONGLOOK.
 
+MEND=\
+Command : MEND\n\r\
+Usage   : MEND [NAME]\n\r\
+Example : mend sword\n\r\
+If your character knows any suitable skills that might mend \
+something like a damaged or blunted weapon, this command will automatically \
+use the skill on the target.
+
 METAMSGCOMMAND=\
 Command : METAMSGCOMMAND\n\r\
 Usage   : METAMSGCOMMAND\n\r\
