@@ -2103,10 +2103,11 @@ weapons, the melded weapon becomes two handed.  When melding armor, only adjacen
 worn armor pieces may be melded.  This spell can have a detrimental impact on \
 magical affects of the objects.
 
+LESSER_MEND=SPELL_MEND
 SPELL_MEND=<ABILITY>\
-Usage    : CAST "MEND" [TARGET NAME]\n\r\
-Example  : cast "mend" sword\n\r\
-Allows the caster to mend damaged items and blunt weapons being carried, making them \
+Usage    : CAST "LESSER MEND" [TARGET NAME]\n\r\
+Example  : cast "lesser mend" sword\n\r\
+Allows the caster to mend damaged lesser items and blunt weapons being carried, making them \
 whole and as new.
 
 SPELL_METEORSTORM=SPELL_METEOR_STORM
